# fw_linux

./: .gitignore  INSTALLATION.md  README.md  auth.sh  build.sh  capacitor.config.json  fastpair_spam.sh  framework7.json  install.sh  nodogsplash.conf  package-lock.json  package.json  update.sh
api/: .env  Cargo.toml
api/src/: build.rs  main.rs
api/src/ble/: apple.rs  fastpair.rs  mod.rs  swiftpair.rs
api/src/ir/: mod.rs
api/src/network_attacks/: arp_sender.rs  bettercap_launcher.rs  dhcp_pig.rs  mod.rs  sniffer.rs
api/src/network_attacks/dhcp_pig/: dhcp_discover_sender.rs  mod.rs
api/src/nfc/: mod.rs  nested_attack.rs  nfc_poll.c
api/src/wifi/: beacon_spam.rs  extract_zip.rs  mod.rs  wifi_dos.rs  wps_bruteforce.rs
src/: index.html  manifest.json
src/components/: app.svelte
src/js/: app.js  ir_parser.js  ir_writer.js  routes.js  store.js
src/js/wifi/: evilportal.js  wifi_helper.js
src/pages/: ble.svelte  home.svelte  ir.svelte  network_attacks.svelte  nfc.svelte  subghz.svelte
src/pages/ble/: ble_scan.svelte  ble_spam.svelte
src/pages/ir/: ir_rc.svelte
src/pages/network_attacks/: arp_scanner.svelte  bc.svelte  dhcp_starvation.svelte  networks_details.svelte  sniffer.svelte
src/pages/nfc/: nfc_nested_attack.svelte  nfc_read.svelte  nfc_tag_details.svelte
src/pages/wifi/: beacon_spam.svelte  evil_portal.svelte  scan_result.svelte  wifi_dos.svelte  wps_bruteforce.svelte
